srv/salt/kubernetes/charts/argo/files/events-webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook
spec:
  replica: 1
  type: webhook
  eventSourceRef:
    name: webhook-event-source
  template:
    serviceAccountName: argo-events-sa
  service:
    ports:
      - port: 12000
        targetPort: 12000
  subscribers:
    http:
      - "http://webhook-sensor.argo-events.svc:9300/"
